--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,9 @@
     "files.associations": {
         "ostream": "c",
         "signal.h": "c",
-        "unistd.h": "c"
+        "unistd.h": "c",
+        "xc.h": "c",
+        "algorithm": "c",
+        "iostream": "cpp"
     }
 }
