--- a/Obligatories/Q3/SO/Laboratori/S5/Makefile
+++ b/Obligatories/Q3/SO/Laboratori/S5/Makefile
@@ -1,4 +1,4 @@
-all: mem1_previo mem2_previo mem2_previo_v2 mem3_previo mem1 mem2
+all: mem1_previo mem2_previo mem2_previo_v2 mem3_previo mem3_previo_v2 mem1 mem2
 
 mem1_previo: mem1_previo.c
 	gcc -o mem1_previo mem1_previo.c
@@ -11,6 +11,9 @@ mem2_previo_v2: mem2_previo_v2.c
 
 mem3_previo: mem3_previo.c
 	gcc -o mem3_previo mem3_previo.c
+
+mem3_previo_v2: mem3_previo_v2.c
+	gcc -o mem3_previo_v2 mem3_previo_v2.c
 
 mem1: mem1.c
 	gcc -o mem1 mem1.c
