--- a/Obligatories/Q3/PE/Bloc T/makefile
+++ b/Obligatories/Q3/PE/Bloc T/makefile
@@ -4,8 +4,10 @@ bt: bt.cc
 	g++ -std=c++17 -o bt bt.cc
 
 BFS: BFS.cc
-	g++ -std=c++17 -o BFS BFS.cc
+	g++ -std=c++17 -o BFS_algo BFS.cc
 
 DFS: DFS.cc
-	g++ -std=c++17 -o DFS DFS.cc
+	g++ -std=c++17 -o DFS_algo DFS.cc
 
+clean:
+	rm -f DFS_algo BFS_algo bt
