--- a/Obligatories/Q3/PE/Bloc T/makefile
+++ b/Obligatories/Q3/PE/Bloc T/makefile
@@ -1,13 +1,16 @@
-all: bt DFS BFS
+all: bt bt_v2 DFS BFS
 
 bt: bt.cc
-	g++ -std=c++17 -o bt bt.cc
+	g++ -std=c++23 -o bt bt.cc
+
+bt_v2: bt_v2.cc
+	g++ -std=c++23 -o bt_v2 bt_v2.cc
 
 BFS: BFS.cc
-	g++ -std=c++17 -o BFS_algo BFS.cc
+	g++ -std=c++23 -o BFS_algo BFS.cc
 
 DFS: DFS.cc
-	g++ -std=c++17 -o DFS_algo DFS.cc
+	g++ -std=c++23 -o DFS_algo DFS.cc
 
 clean:
 	rm -f DFS_algo BFS_algo bt
