--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "iostream": "cpp",
-        "config.h": "c"
+        "config.h": "c",
+        "ostream": "cpp"
     }
 }
